# cpptoolslib

./: .travis.yml  CMakeLists.txt  Makefile  README.md
cmake/: cpptoolslibConfig.cmake.in
src/fs/: fs.cpp  fs.h
src/networking/: networking.cpp  networking.h
src/shell/: shell.cpp  shell.h
src/string/: string.cpp  string.h
src/user/: user.cpp  user.h
test/: test.cpp  test.h
